--- a/src/learning_log/learning_log/learning_logs/templates/learning_logs/topics.html
+++ b/src/learning_log/learning_log/learning_logs/templates/learning_logs/topics.html
@@ -3,7 +3,7 @@
     <p>Topics</p>
     <ul>
         {% for topic in topics %}
-            <li>{{topic}}</li>
+            <li><a href="{% url 'learning_logs:topic' topic.id %}">{{topic}}</a></li>
         {% empty %}
             <li>no topics have been added yet.</li>
         {% endfor %}
