add and edit entry

--- a/src/learning_log/learning_log/learning_logs/templates/learning_logs/base.html
+++ b/src/learning_log/learning_log/learning_logs/templates/learning_logs/base.html
@@ -1,5 +1,7 @@
 <p>
     <a href="{% url 'learning_logs:index' %}">Learning Log</a>
     <a href="{% url 'learning_logs:topics' %}">Topics</a>
+    
+    <a href="{% url 'learning_logs:new_topic' %}">Add a New Topic</a>
 </p>
 {% block content %}{% endblock content %}
